# SDDMM_GPU_comment

./: .gitignore  README.md
HiPC18/: CMakeLists.txt
HiPC18/include/: CudaTimeCalculator.cuh  Matrix.hpp  cudaErrorCheck.cuh  cudaTimeCalculator.cuh  cudaUtil.cuh  host.hpp  kernel.cuh  matrixSetting.hpp  sddmm.h  util.h  wmmaSetting.hpp
HiPC18/old/: CMakeLists.txt
HiPC18/old/src/: sddmm.cu  util.h
HiPC18/src/: Matrix.cpp  checkData.cpp  cudaTimeCalculator.cu  host.cpp  kernel.cu  kernel.h  main.cu  sddmm.cu  util.cpp  util.h
dataset/: test1.mtx  test2.mtx
